MDEV-12258 InnoDB: Fix the bogus debug assertion introduced in MDEV-12219

After a partial rollback, an undo log segment that is empty
may carry a duplicate-looking top_undo_no.

Adjust the debug assertions and add a test.